2008-06-02  Albert Chu <chu11@llnl.gov>

 	* ipmi-sensors/src/ipmi-sensors-reading.c: Support optional sensor
 	state fields as stated in IPMI spec.  Support workaround for Dell
 	no sensor-state returned issue.
 
 	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c:
 	Support workaround for Dell no sensor-state returned issue.

        * common/src/tool-fiid-wrappers.h (_FIID_OBJ_LEN_BYTES): New
        macro.
	
2008-06-02  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_get_sensor_reading): Change internal API so that return value -1
	= error, 0 = unreadable sensor reading, 1 = sensor reading
	success.

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_threshold_sensor_reading, _digital_sensor_reading,
	_specific_sensor_reading): Re-work with new interface call to
	_get_sensor_reading.
	
2008-06-02  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-reading.c
	(_get_sensor_specific_event_message_list,
	_get_generic_event_message_list, _get_threshold_message_list),
	ipmi-sensors/src/ipmi-sensors-display-common.c
	(ipmi_sensors_output_event_message_list): Change internal API so
	that NULL event_message_list means "Unknown" reading.  Event
	message list creation responsible for storing "OK" event message
	when appropriate.

	* ipmi-sensors/src/ipmi-sensors-reading.c (sensor_rading): Do not
	exit on an error of
	IPMI_COMP_CODE_REQUEST_SENSOR_DATA_OR_RECORD_NOT_PRESENT.

	* ipmi-sensors/src/ipmi-sensors-simple-display.c
	(sensors_display_simple_full_record): Fix output formatting.
	
2008-05-29  Albert Chu <chu11@llnl.gov>
  
 	* libfreeipmi/src/api/ipmi-api.c (ipmi_ctx_open_inband): Fix
 	driver device corner case.
	
2008-05-27  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/ipmi-sensors.8.pre.in: Fix typo.
	
2008-05-27  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_6_3.
