@@ -44,65 +44,6 @@
 #include "tool-sdr-cache-common.h"
 #include "tool-sensor-common.h"
 
-fiid_template_t l_tmpl_cmd_get_sensor_reading_threshold_rs =
-  {
-    {8, "cmd", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {8, "comp_code", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    
-    {8, "sensor_reading", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    
-    {5, "reserved1", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {1, "reading_state", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {1, "sensor_scanning", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {1, "all_event_messages", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    
-    {6, "sensor_state", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {2, "reserved2", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    
-    /* optional byte */
-    {8, "ignore", FIID_FIELD_OPTIONAL | FIID_FIELD_LENGTH_FIXED}, 
-    
-    {0,  "", 0}
-  };
-  
-fiid_template_t l_tmpl_cmd_get_sensor_reading_discrete_8_states_rs =
-  {
-    {8, "cmd", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {8, "comp_code", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    
-    {8, "sensor_reading", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    
-    {5, "reserved1", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {1, "reading_state", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {1, "sensor_scanning", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {1, "all_event_messages", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    
-    {8, "sensor_state", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    
-    /* optional byte */
-    {8, "ignore", FIID_FIELD_OPTIONAL | FIID_FIELD_LENGTH_FIXED}, 
-    
-    {0,  "", 0}
-  };
-
-fiid_template_t l_tmpl_cmd_get_sensor_reading_discrete_15_states_rs =
-  {
-    {8, "cmd", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {8, "comp_code", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    
-    {8, "sensor_reading", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    
-    {5, "reserved1", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {1, "reading_state", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {1, "sensor_scanning", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {1, "all_event_messages", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    
-    {15, "sensor_state", FIID_FIELD_REQUIRED | FIID_FIELD_LENGTH_FIXED}, 
-    {1, "reserved2", FIID_FIELD_OPTIONAL | FIID_FIELD_LENGTH_FIXED}, 
-    
-    {0,  "", 0}
-  };
-
 #define IPMI_SENSORS_BUFLEN   1024
 #define IPMI_SENSORS_MAX_LIST   32
 
@@ -381,10 +322,11 @@ sensor_reading (struct ipmi_sensors_state_data *state_data,
   uint8_t event_reading_type_code;
   int sensor_class;
   fiid_obj_t obj_cmd_rs = NULL;  
-  fiid_obj_t l_obj_cmd_rs = NULL;
   double *tmp_reading = NULL;
   uint64_t val;
   int rv = -1;
+  uint64_t sensor_state;
+  int8_t sensor_state_len;
 
   assert(state_data);
   assert(sdr_record);
@@ -430,43 +372,59 @@ sensor_reading (struct ipmi_sensors_state_data *state_data,
                                              &event_reading_type_code) < 0)
     return -1;
 
+  _FIID_OBJ_CREATE(obj_cmd_rs, tmpl_cmd_get_sensor_reading_rs);
+
+  if (ipmi_cmd_get_sensor_reading (state_data->ipmi_ctx, 
+                                   sensor_number, 
+                                   obj_cmd_rs) < 0)
+    {
+      /* A sensor listed by the SDR is not present.  Skip it's
+       * output, don't error out.
+       */
+      if (ipmi_check_completion_code(obj_cmd_rs,
+                                     IPMI_COMP_CODE_REQUEST_SENSOR_DATA_OR_RECORD_NOT_PRESENT) == 1)
+        {
+          if (state_data->prog_data->args->common.flags & IPMI_FLAGS_DEBUG_DUMP)
+            pstdout_fprintf(state_data->pstate,
+                            stderr,
+                            "Sensor number 0x%X data in record %u not present\n",
+                            sensor_number,
+                            record_id);
+          rv = 0;
+        }
+      else
+        pstdout_fprintf(state_data->pstate,
+                        stderr,
+                        "ipmi_cmd_get_sensor_reading_discrete: %s\n",
+                        ipmi_ctx_strerror(ipmi_ctx_errnum(state_data->ipmi_ctx)));
+      goto cleanup;
+    }
+
+  /* 
+   * IPMI Workaround (achu)
+   *
+   * Discovered on Dell 2950.
+   *
+   * It seems the sensor_state may not be returned by the server
+   * at all for some sensors.  Under this situation, there's not
+   * much that can be done.  Since there is no sensor_state, we
+   * just assume that no states have been asserted and the
+   * sensor_state = 0;
+   */
+
+  _FIID_OBJ_GET_WITH_RETURN_VALUE (obj_cmd_rs,
+                                   "sensor_state",
+                                   &sensor_state,
+                                   sensor_state_len);
+  
+  if (!sensor_state_len)
+    sensor_state = 0;
+  
   sensor_class = sensor_classify (event_reading_type_code);
 
   if (sensor_class == SENSOR_CLASS_THRESHOLD)
     {
-      _FIID_OBJ_CREATE(obj_cmd_rs, tmpl_cmd_get_sensor_reading_threshold_rs);
-
-      if (ipmi_cmd_get_sensor_reading_threshold (state_data->ipmi_ctx, 
-                                                 sensor_number, 
-                                                 obj_cmd_rs) < 0)
-        {
-          /* A sensor listed by the SDR is not present.  Skip it's
-           * output, don't error out.
-           */
-          if (ipmi_check_completion_code(obj_cmd_rs,
-                                         IPMI_COMP_CODE_REQUEST_SENSOR_DATA_OR_RECORD_NOT_PRESENT) == 1)
-            {
-              if (state_data->prog_data->args->common.flags & IPMI_FLAGS_DEBUG_DUMP)
-                pstdout_fprintf(state_data->pstate,
-                                stderr,
-                                "Sensor number 0x%X data in record %u not present\n",
-                                sensor_number,
-                                record_id);
-              rv = 0;
-            }
-          else
-            pstdout_fprintf(state_data->pstate,
-                            stderr,
-                            "ipmi_cmd_get_sensor_reading_discrete: %s\n",
-                            ipmi_ctx_strerror(ipmi_ctx_errnum(state_data->ipmi_ctx)));
-          goto cleanup;
-        }
-
-      _FIID_OBJ_COPY(l_obj_cmd_rs,
-                     obj_cmd_rs,
-                     l_tmpl_cmd_get_sensor_reading_threshold_rs);
-     
-      _FIID_OBJ_GET (l_obj_cmd_rs, "sensor_reading", &val);
+      _FIID_OBJ_GET (obj_cmd_rs, "sensor_reading", &val);
 
       if (record_type == IPMI_SDR_FORMAT_FULL_RECORD)
         {
@@ -540,14 +498,10 @@ sensor_reading (struct ipmi_sensors_state_data *state_data,
        * can still output something.
        */
            
-      _FIID_OBJ_GET (l_obj_cmd_rs, 
-                     "sensor_state", 
-                     &val);
-
       if (_get_threshold_message_list (state_data,
                                        event_message_list,
                                        event_message_list_len,
-                                       val) < 0)
+                                       sensor_state) < 0)
         goto cleanup;
       
       rv = 1;
@@ -555,88 +509,14 @@ sensor_reading (struct ipmi_sensors_state_data *state_data,
   else if (sensor_class == SENSOR_CLASS_GENERIC_DISCRETE
            || sensor_class ==  SENSOR_CLASS_SENSOR_SPECIFIC_DISCRETE
            || sensor_class == SENSOR_CLASS_OEM)
-    {
-      fiid_field_t *l_tmpl_cmd_get_sensor_reading_discrete_rs = NULL;
-      int32_t obj_cmd_rs_len;
-      int8_t sensor_state_len;
-
-      _FIID_OBJ_CREATE(obj_cmd_rs, tmpl_cmd_get_sensor_reading_discrete_rs);
-
-      if (ipmi_cmd_get_sensor_reading_discrete (state_data->ipmi_ctx, 
-                                                sensor_number, 
-                                                obj_cmd_rs) < 0)
-        {
-          /* A sensor listed by the SDR is not present.  Skip it's
-           * output, don't error out.
-           */
-          if (ipmi_check_completion_code(obj_cmd_rs,
-                                         IPMI_COMP_CODE_REQUEST_SENSOR_DATA_OR_RECORD_NOT_PRESENT) == 1)
-            {
-              if (state_data->prog_data->args->common.flags & IPMI_FLAGS_DEBUG_DUMP)
-                pstdout_fprintf(state_data->pstate,
-                                stderr,
-                                "Sensor number 0x%X data in record %u not present\n",
-                                sensor_number,
-                                record_id);
-              rv = 0;
-            }
-          else
-            pstdout_fprintf(state_data->pstate,
-                            stderr,
-                            "ipmi_cmd_get_sensor_reading_discrete: %s\n",
-                            ipmi_ctx_strerror(ipmi_ctx_errnum(state_data->ipmi_ctx)));
-          goto cleanup;
-        }
-      
-      _FIID_OBJ_LEN_BYTES(obj_cmd_rs, obj_cmd_rs_len);
-
-      /* achu:
-       * 
-       * hack to get around optional byte, b/c sensor_state size of 15
-       * bits messes up fiid_obj_copy's expectation of byte aligned
-       * fields when doing a copy.
-       */
-
-      if (obj_cmd_rs_len == fiid_template_block_len_bytes(l_tmpl_cmd_get_sensor_reading_discrete_8_states_rs, 
-                                                          "cmd", 
-                                                          "sensor_state"))
-        l_tmpl_cmd_get_sensor_reading_discrete_rs = &l_tmpl_cmd_get_sensor_reading_discrete_8_states_rs[0];
-      else
-        l_tmpl_cmd_get_sensor_reading_discrete_rs = &l_tmpl_cmd_get_sensor_reading_discrete_15_states_rs[0];
-      
-      _FIID_OBJ_CREATE(l_obj_cmd_rs, l_tmpl_cmd_get_sensor_reading_discrete_rs);
-      
-      _FIID_OBJ_COPY(l_obj_cmd_rs,
-                     obj_cmd_rs,
-                     l_tmpl_cmd_get_sensor_reading_discrete_rs);
-      
-      /* 
-       * IPMI Workaround (achu)
-       *
-       * Discovered on Dell 2950.
-       *
-       * It seems the sensor_state may not be returned by the server
-       * at all for some sensors.  Under this situation, there's not
-       * much that can be done.  Since there is no sensor_state, we
-       * just assume that no states have been asserted and the
-       * sensor_state = 0;
-       */
-
-      _FIID_OBJ_GET_WITH_RETURN_VALUE (l_obj_cmd_rs,
-                                       "sensor_state",
-                                       &val,
-                                       sensor_state_len);
-
-      if (!sensor_state_len)
-        val = 0;
-      
+    {               
       if (sensor_class == SENSOR_CLASS_GENERIC_DISCRETE)
         {
           if (_get_generic_event_message_list (state_data,
                                                event_message_list,
                                                event_message_list_len, 
                                                event_reading_type_code, 
-                                               val) < 0)
+                                               sensor_state) < 0)
             goto cleanup;
 
           rv = 1;
@@ -647,7 +527,7 @@ sensor_reading (struct ipmi_sensors_state_data *state_data,
                                                        event_message_list,
                                                        event_message_list_len,
                                                        sensor_type, 
-                                                       val) < 0)
+                                                       sensor_state) < 0)
             goto cleanup;
 
           rv = 1;
@@ -659,7 +539,7 @@ sensor_reading (struct ipmi_sensors_state_data *state_data,
 
           if (asprintf (&event_message, 
                         "OEM State = %04Xh", 
-                        (uint16_t) val) < 0)
+                        (uint16_t) sensor_state) < 0)
             {
               pstdout_perror(state_data->pstate, "asprintf");
               goto cleanup;
@@ -687,7 +567,6 @@ sensor_reading (struct ipmi_sensors_state_data *state_data,
     *reading = tmp_reading;
  cleanup:
   _FIID_OBJ_DESTROY(obj_cmd_rs);
-  _FIID_OBJ_DESTROY(l_obj_cmd_rs);
   if (rv <= 0)
     {
       if (tmp_reading)
