@@ -1,3 +1,7 @@
+2008-06-03  Albert Chu <chu11@llnl.gov>
+
+	* ipmi-sensors/src/ipmi-sensors-reading.c: Code cleanup.
+
 2008-06-02  Albert Chu <chu11@llnl.gov>
 
  	* ipmi-sensors/src/ipmi-sensors-reading.c: Support optional sensor
